yamls/headless.statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  clusterIP: None
  selector:
    app: tomcat
  ports:
    - targetPort: tomcat
      port: 80
      protocol: TCP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  selector:
    matchLabels:
      app: nexus
      section: tools
  serviceName: nexus
  template:
    metadata:
      labels:
        app: nexus
        section: tools
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:3.27.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
  volumeClaimTemplates:
    - metadata:
        name: nexus-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "managed-nfs-storage"
        resources:
          requests:
            storage: 8Gi
