yamls/service.externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: google-service
  labels:
    post: google
spec:
  type: ExternalName
  externalName: google.com
