yamls/web-app.deply.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - name: http
      port: 80
      targetPort: web-app
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - "echo 'welcome to my fucking app!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
          resources:
            requests:
              cpu: "400m"
              memory: "300Mi"
            limits:
              memory: "300Mi"
          ports:
            - name: web-app
              containerPort: 80
              protocol: TCP
